# brave-core

./: BUILD.gn  DEPS  package-lock.json  package.json
app/: brave_generated_resources.grd
browser/: BUILD.gn  brave_browser_main_extra_parts.cc  brave_browser_process_impl.cc  brave_browser_process_impl.h  brave_content_browser_client.cc  brave_profile_prefs.cc  brave_profile_prefs_browsertest.cc  browser_context_keyed_service_factories.cc
common/: network_constants.cc  network_constants.h  pref_names.cc  pref_names.h  resource_bundle_helper.cc  shield_exceptions.cc  shield_exceptions_unittest.cc  webui_url_constants.cc  (+1 more)
components/brave_webcompat_reporter_ui/: BUILD.gn  brave_webcompat_reporter.html  brave_webcompat_reporter.tsx
components/brave_webcompat_reporter_ui/actions/: webcompatreporter_actions.ts
components/brave_webcompat_reporter_ui/components/: display.ts  index.ts  structure.ts  structure.tsx
components/brave_webcompat_reporter_ui/constants/: webcompatreporter_types.ts
components/brave_webcompat_reporter_ui/reducers/: index.ts  webcompatreporter_reducer.ts
components/brave_webcompat_reporter_ui/screens/: ConfirmationView.tsx  ReportView.tsx  WebcompatReportModal.tsx  app.tsx
components/brave_webcompat_reporter_ui/stories/: story.tsx
components/brave_webcompat_reporter_ui/stories/modal/: index.tsx
components/brave_webcompat_reporter_ui/stories/modal/screens/: ConfirmationView.tsx  ReportView.tsx
extensions/browser/api/web_request/: BUILD.gn  brave_web_request_proxying_websocket.cc  brave_web_request_proxying_websocket.h
test/: BUILD.gn
(+281 files in other folders)
