import("//brave/components/common/typescript.gni")

transpile_web_ui("brave_webcompat_reporter_ui") {
  entry_points = [
    ["brave_webcompat_reporter", rebase_path("brave_webcompat_reporter.tsx")]
  ]

  resource_name = "brave_webcompat_reporter"
}

pack_web_resources("generated_resources") {
  resource_name = "brave_webcompat_reporter"
  output_dir = "$root_gen_dir/brave/components/brave_webcompat_reporter/resources"
  deps = [
    ":brave_webcompat_reporter_ui"
  ]
}
