# Copyright (c) 2019 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//extensions/buildflags/buildflags.gni")

assert(enable_extensions,
       "Cannot depend on web_request because enable_extensions=false.")

source_set("web_request") {
  sources = [
    "brave_web_request_proxying_websocket.cc",
    "brave_web_request_proxying_websocket.h",
  ]

  deps = [
    "//base",
    "//brave/browser/net",
    "//extensions/browser/api/web_request",
    "//services/network/public/cpp",
  ]
}
